Element navne ændring
Alle elementerne i projektet har fået navn deres navne ud fra type og funktion.

--- a/MainWindow.xaml
+++ b/MainWindow.xaml
@@ -13,12 +13,12 @@
             <ColumnDefinition Width="*"/>
         </Grid.ColumnDefinitions>
 
-        <Border Grid.Column="0" Margin="2" Background="WhiteSmoke" Width="250" HorizontalAlignment="Center" BorderThickness="4" BorderBrush="Gray">
+        <Border Grid.Column="0" Style="{StaticResource MainBorder}" Width="250" HorizontalAlignment="Center" BorderThickness="4" >
 
             <StackPanel >
-                <Button Margin="20,30" Background="Gray" Height="50" Foreground="White" FontSize="22" Name="btnHome" Click="btnHome_Click" >Home</Button>
-                <Button Margin="20,30" Background="Gray" Height="50" Foreground="White" FontSize="22" Name="btnUnderviser" Click="btnUnderviser_Click" >Underviser</Button>
-                <Button Margin="20,30" Background="Gray" Height="50" Foreground="White" FontSize="22" Name="btnLeder" Click="btnLeder_Click" >Leder</Button>
+                <Button Style="{StaticResource PanelBtn}" Name="btnHome" Click="btnHome_Click" >Home</Button>
+                <Button Style="{StaticResource PanelBtn}" Name="btnUnderviser" Click="btnUnderviser_Click" >Underviser</Button>
+                <Button Style="{StaticResource PanelBtn}" Name="btnLeder" Click="btnLeder_Click" >Leder</Button>
                 <Border BorderBrush="Gray" BorderThickness="4" Margin="10,0,10,0">
                     <StackPanel>
                         <DockPanel>
@@ -41,8 +41,7 @@
 
         </Border>
 
-
-        <Border Grid.Column="1" Margin="2" Background="WhiteSmoke" Name="HomePanel" HorizontalAlignment="Stretch" BorderThickness="4" BorderBrush="Gray" Visibility="Collapsed">
+        <Border Grid.Column="1" Style="{StaticResource MainBorder}" Name="HomePanel" HorizontalAlignment="Stretch" BorderThickness="4" Visibility="Collapsed">
             <StackPanel HorizontalAlignment="Stretch" Background="WhiteSmoke" RenderTransformOrigin="0.38,0.595"  >
                 <Label FontSize="54" FontWeight="Heavy" HorizontalAlignment="Center" FontFamily="Times New Roman" Margin="0,50,0,0" >Velkommen til TEC App</Label>
                 <fa:ImageAwesome Icon="Spinner"  SpinDuration="50" Spin="true" Width="191"  Height="196" Margin="150"/>
@@ -51,10 +50,9 @@
 
         </Border>
 
-
         <Border Grid.Column="1" Background="WhiteSmoke" Name="UnderviserPanel" BorderThickness="2" BorderBrush="Gray" Visibility="Visible">
 
-           
+
             <ContentControl x:Name="mainContent" Grid.Row="1" HorizontalAlignment="Stretch" VerticalAlignment="Stretch">
 
 
@@ -62,9 +60,7 @@
 
         </Border>
 
-
-
-        <Border Grid.Column="1" Margin="2" Background="WhiteSmoke" Name="LederPanel" HorizontalAlignment="Stretch" BorderThickness="4" BorderBrush="Gray" Visibility="Collapsed">
+        <Border Grid.Column="1" Style="{StaticResource MainBorder}" Name="LederPanel" HorizontalAlignment="Stretch" BorderThickness="4" Visibility="Collapsed">
 
             <Grid HorizontalAlignment="Center" VerticalAlignment="Center">
                 <Grid.ColumnDefinitions>
@@ -84,14 +80,6 @@
 
                 <!--<Button x:Name="signinButton"  Background="Gray" Content="Sign In" Margin="10" FontSize="30" Foreground="White" Click="signinButton_Click"   Grid.Column="1"  Grid.Row="2"   Height="64" Width="300"    />-->
             </Grid>
-
-
-
-
-
         </Border>
-
-
-
     </Grid>
 </Window>
