--- a/Views/MeritBlanketView.xaml
+++ b/Views/MeritBlanketView.xaml
@@ -4,127 +4,125 @@
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              xmlns:local="clr-namespace:GFElevInterview.Views"
-             Background="White"
              mc:Ignorable="d" 
              d:DesignHeight="450" d:DesignWidth="800">
     <Grid>
         <Border Grid.Row="0" BorderBrush="Gray" BorderThickness="0" Visibility="Visible">
-            <StackPanel Margin="10"  Grid.Column="0" Grid.Row="4"  x:Name="meritBlanket" >
+            <StackPanel Margin="10"  Grid.Column="0" Grid.Row="4"  x:Name="stackMerit" >
 
                 <Label Content="Ansøgning om merit på Grundforløb , GF2:" Margin="10" FontSize="20" FontWeight="Bold" />
-                <Border BorderBrush="Gray" BorderThickness="1" Margin="10" x:Name="DanskValidation" >
+                <Border BorderBrush="Gray" BorderThickness="1" Margin="10" x:Name="bdrDanskValidation">
                     <StackPanel Margin="10">
                         <Label Content="Dansk:" FontSize="20" FontWeight="Bold"/>
                         <DockPanel>
                            
                             <Label Content="Eksamen" FontSize="20"/>
-                            <RadioButton x:Name="DanskEksamenJa" Margin="5" HorizontalAlignment="Left" GroupName="DEksamen" >
+                            <RadioButton x:Name="rbDanskEksamenJa" Margin="5" HorizontalAlignment="Left" GroupName="rbDEksamen">
                                 <RadioButton.LayoutTransform>
                                     <ScaleTransform ScaleX="2" ScaleY="2" />
                                 </RadioButton.LayoutTransform>
                             </RadioButton>
 
-                            <RadioButton x:Name="DanskEksamenNej" Margin="5" HorizontalAlignment="Right" GroupName="DEksamen">
+                            <RadioButton x:Name="rbDanskEksamenNej" Margin="5" HorizontalAlignment="Right" GroupName="rbDEksamen">
                                 <RadioButton.LayoutTransform>
                                     <ScaleTransform ScaleX="2" ScaleY="2" />
                                 </RadioButton.LayoutTransform>
                             </RadioButton>
 
                             <Label Content="Undervis" FontSize="20"/>
-                            <RadioButton x:Name="DanskUndervisJa" Margin="5" HorizontalAlignment="Left" GroupName="DUndervis">
+                            <RadioButton x:Name="rbDanskUndervisJa" Margin="5" HorizontalAlignment="Left" GroupName="DUndervis">
                                 <RadioButton.LayoutTransform>
                                     <ScaleTransform ScaleX="2" ScaleY="2"/>
                                 </RadioButton.LayoutTransform>
                             </RadioButton>
                             
-                            <RadioButton x:Name="DanskUndervisNej" Margin="5" HorizontalAlignment="Left" GroupName="DUndervis">
+                            <RadioButton x:Name="rbDanskUndervisNej" Margin="5" HorizontalAlignment="Left" GroupName="DUndervis">
                                 <RadioButton.LayoutTransform>
                                     <ScaleTransform ScaleX="2" ScaleY="2"/>
                                 </RadioButton.LayoutTransform>
                             </RadioButton>
 
                             <Label Content="Niveau" FontSize="20"/>
-                            <ComboBox x:Name="ComboboxDansk" FontSize="20" SelectionChanged="ComboboxFagNiveau_SelectionChanged">
+                            <ComboBox x:Name="cmbDansk" FontSize="20" SelectionChanged="ComboboxFagNiveau_SelectionChanged">
                             </ComboBox>
                             
                         </DockPanel>
                     </StackPanel>
                 </Border>
 
-                <Border BorderBrush="Gray" BorderThickness="1" Margin="10" x:Name="EngelskValidation">
+                <Border BorderBrush="Gray" BorderThickness="1" Margin="10" x:Name="bdrEngelskValidation">
                     <StackPanel Margin="10">
                         <Label Content="Engelsk:" FontSize="20" FontWeight="Bold"/>
                         <DockPanel>
                             
                             <Label Content="Eksamen" FontSize="20"/>
-                            <RadioButton x:Name="EngelskEksamenJa" Margin="5" HorizontalAlignment="Left" GroupName="EEksamen">
+                            <RadioButton x:Name="rbEngelskEksamenJa" Margin="5" HorizontalAlignment="Left" GroupName="rbEEksamen">
                                 <RadioButton.LayoutTransform>
                                     <ScaleTransform ScaleX="2" ScaleY="2"/>
                                 </RadioButton.LayoutTransform>
                             </RadioButton>
-                            
-                            <RadioButton x:Name="EngelskEksamenNej" Margin="5" HorizontalAlignment="Right" GroupName="EEksamen">
+
+                            <RadioButton x:Name="rbEngelskEksamenNej" Margin="5" HorizontalAlignment="Right" GroupName="rbEEksamen">
                                 <RadioButton.LayoutTransform>
                                     <ScaleTransform ScaleX="2" ScaleY="2"/>
                                 </RadioButton.LayoutTransform>
                             </RadioButton>
 
                             <Label Content="Undervis" FontSize="20"/>
-                            <RadioButton x:Name="EngelskUndervisJa" Margin="5" HorizontalAlignment="Left" GroupName="EUndervis">
+                            <RadioButton x:Name="rbEngelskUndervisJa" Margin="5" HorizontalAlignment="Left" GroupName="rbEUndervis">
                                 <RadioButton.LayoutTransform>
                                     <ScaleTransform ScaleX="2" ScaleY="2"/>
                                 </RadioButton.LayoutTransform>
                             </RadioButton>
-                            
-                            <RadioButton x:Name="EngelskUndervisNej" Margin="5" HorizontalAlignment="Right" GroupName="EUndervis">
+
+                            <RadioButton x:Name="rbEngelskUndervisNej" Margin="5" HorizontalAlignment="Right" GroupName="rbEUndervis">
                                 <RadioButton.LayoutTransform>
                                     <ScaleTransform ScaleX="2" ScaleY="2"/>
                                 </RadioButton.LayoutTransform>
                             </RadioButton>
 
                             <Label Content="Niveau" FontSize="20"/>
-                            <ComboBox x:Name="ComboboxEngelsk" FontSize="20"  >
+                            <ComboBox x:Name="cmbEngelsk" FontSize="20"  >
                             </ComboBox>
                             
                         </DockPanel>
                     </StackPanel>
                 </Border>
 
-                <Border BorderBrush="Gray" BorderThickness="1" Margin="10" x:Name="MatematikValidation">
+                <Border BorderBrush="Gray" BorderThickness="1" Margin="10" x:Name="bdrMatematikValidation">
                     <StackPanel Margin="10">
                         <Label Content="Matematik:" FontSize="20" FontWeight="Bold"/>
                         <DockPanel>
 
                             <Label Content="Eksamen" FontSize="20"/>
-                            <RadioButton x:Name="MatematikEksamenJa" Margin="5" HorizontalAlignment="Left" GroupName="MEksamen">
+                            <RadioButton x:Name="rbMatematikEksamenJa" Margin="5" HorizontalAlignment="Left" GroupName="rbMEksamen">
                                 <RadioButton.LayoutTransform>
                                     <ScaleTransform ScaleX="2" ScaleY="2"/>
                                 </RadioButton.LayoutTransform>
                             </RadioButton>
 
-                            <RadioButton x:Name="MatematikEksamenNej" Margin="5" HorizontalAlignment="Right" GroupName="MEksamen">
+                            <RadioButton x:Name="rbMatematikEksamenNej" Margin="5" HorizontalAlignment="Right" GroupName="rbMEksamen">
                                 <RadioButton.LayoutTransform>
                                     <ScaleTransform ScaleX="2" ScaleY="2"/>
                                 </RadioButton.LayoutTransform>
                             </RadioButton>
 
                             <Label Content="Undervis" FontSize="20"/>
-                            <RadioButton x:Name="MatematikUndervisJa" Margin="5" HorizontalAlignment="Left" GroupName="MUndervis">
+                            <RadioButton x:Name="rbMatematikUndervisJa" Margin="5" HorizontalAlignment="Left" GroupName="rbMUndervis">
                                 <RadioButton.LayoutTransform>
                                     <ScaleTransform ScaleX="2" ScaleY="2"/>
                                 </RadioButton.LayoutTransform>
                             </RadioButton>
 
-                            <RadioButton x:Name="MatematikUndervisNej" Margin="5" HorizontalAlignment="Right" GroupName="MUndervis">
+                            <RadioButton x:Name="rbMatematikUndervisNej" Margin="5" HorizontalAlignment="Right" GroupName="rbMUndervis">
                                 <RadioButton.LayoutTransform>
                                     <ScaleTransform ScaleX="2" ScaleY="2"/>
                                 </RadioButton.LayoutTransform>
                             </RadioButton>
 
                             <Label Content="Niveau" FontSize="20"/>
-                            <ComboBox x:Name="ComboboxMatematik" FontSize="20" >
+                            <ComboBox x:Name="cmbMatematik" FontSize="20" >
                             </ComboBox>
-
                         </DockPanel>
                     </StackPanel>
                 </Border>
