--- a/Views/EUVView.xaml
+++ b/Views/EUVView.xaml
@@ -13,7 +13,7 @@
             <Border BorderBrush="Gray" BorderThickness="1" Margin="10" x:Name="educationArea">
                 <StackPanel Margin="10">
                     <Label  Content="Hvilken uddannelse ønske du at påbegynde?" FontSize="20" />
-                    <ComboBox x:Name="educationComboBox"/>
+                    <ComboBox x:Name="educationComboBox" Width="350" HorizontalAlignment="Left"/>
                 </StackPanel>
             </Border>
             <Border BorderBrush="Gray" BorderThickness="1" Margin="10">
@@ -26,7 +26,7 @@
                                     <ScaleTransform ScaleX="2" ScaleY="2"/>
                                 </RadioButton.RenderTransform>
                             </RadioButton>
-                            <RadioButton x:Name="euv1Nej" Content="Nej" GroupName="euv1">
+                            <RadioButton x:Name="euv1Nej" Content="Nej" GroupName="euv1" Width="50" HorizontalAlignment="Left">
                                 <RadioButton.RenderTransform>
                                     <ScaleTransform ScaleX="2" ScaleY="2"/>
                                 </RadioButton.RenderTransform>
@@ -91,7 +91,7 @@
                                                     <ScaleTransform ScaleX="2" ScaleY="2"/>
                                                 </RadioButton.RenderTransform>
                                             </RadioButton>
-                                            <RadioButton x:Name="euv1SporgsmalNej" Margin="5" GroupName="euv1sporgsmal">
+                                            <RadioButton x:Name="euv1SporgsmalNej" Margin="5" GroupName="euv1sporgsmal" Width="50" HorizontalAlignment="Left">
                                                 <RadioButton.RenderTransform>
                                                     <ScaleTransform ScaleX="2" ScaleY="2"/>
                                                 </RadioButton.RenderTransform>
@@ -112,7 +112,7 @@
                                             <ScaleTransform ScaleX="2" ScaleY="2"/>
                                         </RadioButton.RenderTransform>
                                     </RadioButton>
-                                    <RadioButton x:Name="euv2Nej" Margin="0,5,0,0" Content="Nej" >
+                                    <RadioButton x:Name="euv2Nej" Margin="0,5,0,0" Content="Nej" Width="50" HorizontalAlignment="Left">
                                         <RadioButton.RenderTransform>
                                             <ScaleTransform ScaleX="2" ScaleY="2"/>
                                         </RadioButton.RenderTransform>
@@ -126,7 +126,7 @@
             <Border BorderBrush="Gray" BorderThickness="1" Margin="10" x:Name="adresse">
                 <StackPanel>
                     <TextBlock TextWrapping="WrapWithOverflow" Text="Hvilken adresse ønske du at starte på?" FontSize="18" Margin="0,10,0,0"/>
-                    <ComboBox x:Name="uddannelsesBox"/>
+                    <ComboBox x:Name="uddannelsesBox" Width="350" HorizontalAlignment="Left"/>
                 </StackPanel>
             </Border>
             <Border BorderBrush="Gray" BorderThickness="1" Margin="10" x:Name="sps" Height="103">
@@ -138,7 +138,7 @@
                                 <ScaleTransform ScaleX="2" ScaleY="2"/>
                             </RadioButton.RenderTransform>
                         </RadioButton>
-                        <RadioButton x:Name="spsSupportNej" Margin="0,5,0,0" Content="Nej">
+                        <RadioButton x:Name="spsSupportNej" Margin="0,5,0,0" Content="Nej" Width="50" HorizontalAlignment="Left">
                             <RadioButton.RenderTransform>
                                 <ScaleTransform ScaleX="2" ScaleY="2"/>
                             </RadioButton.RenderTransform>
@@ -155,7 +155,7 @@
                                 <ScaleTransform ScaleX="2" ScaleY="2"/>
                             </RadioButton.RenderTransform>
                         </RadioButton>
-                        <RadioButton x:Name="eudSupportNej" Margin="0,5,0,0" Content="Nej">
+                        <RadioButton x:Name="eudSupportNej" Margin="0,5,0,0" Content="Nej" Width="50" HorizontalAlignment="Left">
                             <RadioButton.RenderTransform>
                                 <ScaleTransform ScaleX="2" ScaleY="2"/>
                             </RadioButton.RenderTransform>
