--- a/MainWindow.xaml
+++ b/MainWindow.xaml
@@ -13,12 +13,13 @@
             <ColumnDefinition Width="*"/>
         </Grid.ColumnDefinitions>
 
-        <Border Grid.Column="0" Margin="2" Background="WhiteSmoke" Width="250" HorizontalAlignment="Center" BorderThickness="4" BorderBrush="Gray">
+        <Border Grid.Column="0" Margin="2" Background="WhiteSmoke" Width="220" HorizontalAlignment="Center" BorderThickness="4" BorderBrush="Gray">
 
-            <StackPanel >
-                
-                <Button Margin="20,30" Background="Gray" Height="50" Foreground="White" FontSize="22" Name="btnUnderviser" Click="btnUnderviser_Click" >Underviser</Button>
-                <Button Margin="20,30" Background="Gray" Height="50" Foreground="White" FontSize="22" Name="btnLeder" Click="btnLeder_Click" >Leder</Button>
+            <StackPanel>
+
+                <Button Margin="20,10" Background="Gray" Height="50" Foreground="White" FontSize="22" Name="btnUnderviser" Click="btnUnderviser_Click" >Underviser</Button>
+                <Button Margin="20,10" Background="Gray" Height="50" Foreground="White" FontSize="22" Name="btnLeder" Click="btnLeder_Click" >Leder</Button>
+                <Button Margin="20,10" Background="Gray" Height="50" Foreground="White" FontSize="22" Name="btnVejleder" Click="btnVejleder_Click" >Vejleder(TEMP)</Button>
                 <Border BorderBrush="Gray" BorderThickness="4" Margin="10,0,10,0">
                     <StackPanel>
                         <DockPanel>
@@ -33,9 +34,16 @@
                             <TextBlock Text="Ballerup: " FontSize="20"/>
                             <TextBlock x:Name="BallerupTXT" FontSize="20"/>
                         </DockPanel>
+                        <DockPanel Margin="0,6,0,6">
+                            <TextBlock Text="Fuldt forløb: " FontSize="15"/>
+                            <TextBlock x:Name="BallerupFuldTXT" FontSize="15"/>
+                        </DockPanel>
+                        <TextBlock Text="Ordinær Plus: " FontSize="15"/>
+                        <TextBlock x:Name="BallerupPlusTXT" FontSize="15"/>
                     </StackPanel>
                 </Border>
-                <Image Margin="10,200" Height="150" Width="200" HorizontalAlignment="Center" VerticalAlignment="Bottom" Source="Resources/TECLOGO.png" />
+                <Image Height="139" Width="200" HorizontalAlignment="Center" Source="Resources/TECLOGO.png" />
+                <Image Height="139" Width="200" HorizontalAlignment="Center" Source="Resources/TECLOGO.png" />
 
             </StackPanel>
 
@@ -54,7 +62,7 @@
 
         <Border Grid.Column="1" Background="WhiteSmoke" Name="UnderviserPanel" BorderThickness="2" BorderBrush="Gray" Visibility="Visible">
 
-           
+
             <ContentControl x:Name="mainContent" Grid.Row="1" HorizontalAlignment="Stretch" VerticalAlignment="Stretch">
 
 
