--- a/Views/VisitationsView.xaml
+++ b/Views/VisitationsView.xaml
@@ -5,56 +5,55 @@
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              xmlns:local="clr-namespace:GFElevInterview.Views"
              mc:Ignorable="d" 
-             d:DesignHeight="450" d:DesignWidth="800">
+             d:DesignHeight="450" d:DesignWidth="800" Background="White">
     <Grid>
         <StackPanel>
             <Label Content="Interview guide til Visitations elever"  Style="{StaticResource labVisitation}"/>
-            <Border Style="{StaticResource bdrVisitation}" x:Name="bdrEducation">
-                <StackPanel Margin="10">
-                    <Label  Content="Hvilken uddannelse ønske du at påbegynde?" FontSize="20" />
-                    <ComboBox x:Name="cmbEducation" SelectionChanged="educationComboBox_SelectionChanged"  />
+            <Border Style="{StaticResource bdrVisitation}" x:Name="bdrEducation" Width="600" Height="60">
+                <StackPanel>
+                    <Label  Content="Hvilken uddannelse ønske du at påbegynde?" FontSize="15" HorizontalAlignment="Center"/>
+                    <ComboBox x:Name="cmbEducation" SelectionChanged="educationComboBox_SelectionChanged" Width="250"/>
                 </StackPanel>
             </Border>
-
-            <Border Style="{StaticResource bdrVisitation}" x:Name="bdrAdresse">
-                <StackPanel Margin="10">
-                    <Label  Content="Hvilken adresse ønske du at starte på?" FontSize="20" />
-                    <ComboBox x:Name="cmbAdresse" SelectionChanged="educationAdresseComboBox_SelectionChanged" />
+            <Separator Style="{StaticResource SepSpaceH}"/>
+            <Border Style="{StaticResource bdrVisitation}" x:Name="bdrAdresse" Width="600" Height="60">
+                <StackPanel>
+                    <Label  Content="Hvilken adresse ønske du at starte på?" FontSize="15" HorizontalAlignment="Center"/>
+                    <ComboBox x:Name="cmbAdresse" SelectionChanged="educationAdresseComboBox_SelectionChanged" Width="250"/>
                 </StackPanel>
             </Border>
-
-            <Border Style="{StaticResource bdrVisitation}" x:Name="bdrSps">
-                <StackPanel Margin="10">
-                    <Label  Content="Har du modtaget særlige støtte eller ønsker at søge om særlige pædagogiske støtte?" FontSize="20" />
-
-                    <DockPanel x:Name="docsps">
-                        <RadioButton GroupName="spsSupport" ClickMode="Press"  Margin="20" x:Name="rbSpsJa" Content="Ja" Checked="SPSSupport_Checked">
+            <Separator Style="{StaticResource SepSpaceH}"/>
+            <Border Style="{StaticResource bdrVisitation}" x:Name="bdrSps" Width="600" Height="60">
+                <StackPanel>
+                    <Label Content="Har du modtaget særlige støtte eller ønsker at søge om særlige pædagogiske støtte?" FontSize="15" HorizontalAlignment="Center"/>
+                    <DockPanel x:Name="docsps" Width="150" HorizontalAlignment="Center">
+                        <RadioButton GroupName="spsSupport" x:Name="rbSpsJa" Content="Ja" Checked="SPSSupport_Checked" HorizontalAlignment="Left" VerticalAlignment="Center">
                             <RadioButton.RenderTransform>
-                                <ScaleTransform ScaleX="2" ScaleY="2"/>
+                                <ScaleTransform ScaleX="1.5" ScaleY="1.5"/>
                             </RadioButton.RenderTransform>
                         </RadioButton>
-                        <RadioButton GroupName="spsSupport" ClickMode="Press" Margin="20" x:Name="rbSpsNej" Content="Nej" Checked="SPSSupport_Checked" >
+                        <RadioButton GroupName="spsSupport" x:Name="rbSpsNej" Content="Nej" Checked="SPSSupport_Checked" HorizontalAlignment="Right" VerticalAlignment="Center">
                             <RadioButton.RenderTransform>
-                                <ScaleTransform ScaleX="2" ScaleY="2"/>
+                                <ScaleTransform ScaleX="1.5" ScaleY="1.5"/>
                             </RadioButton.RenderTransform>
                         </RadioButton>
                     </DockPanel>
                 </StackPanel>
             </Border>
+            <Separator Style="{StaticResource SepSpaceH}"/>
+            <Border Style="{StaticResource bdrVisitation}" x:Name="bdrEud" Width="600" Height="60">
+                <StackPanel>
+                    <Label Content="Ønsker du en samtale med eud vejleder?" FontSize="15" HorizontalAlignment="Center"/>
 
-            <Border Style="{StaticResource bdrVisitation}" x:Name="bdrEud">
-                <StackPanel Margin="10">
-                    <Label  Content="Ønsker du en samtale med eud vejleder?" FontSize="20" />
-
-                    <DockPanel x:Name="docEud">
-                        <RadioButton GroupName="eudSupport" ClickMode="Press"  Margin="20" x:Name="rbEudJa" Content="Ja" Checked="EUDSupport_Checked">
+                    <DockPanel x:Name="docEud" Width="150">
+                        <RadioButton GroupName="eudSupport" x:Name="rbEudJa" Content="Ja" Checked="EUDSupport_Checked" HorizontalAlignment="Left" VerticalAlignment="Center">
                             <RadioButton.RenderTransform>
-                                <ScaleTransform ScaleX="2" ScaleY="2"/>
+                                <ScaleTransform ScaleX="1.5" ScaleY="1.5"/>
                             </RadioButton.RenderTransform>
                         </RadioButton>
-                        <RadioButton GroupName="eudSupport" ClickMode="Press" Margin="20" x:Name="rbEudNej" Content="Nej" Checked="EUDSupport_Checked" >
+                        <RadioButton GroupName="eudSupport" x:Name="rbEudNej" Content="Nej" Checked="EUDSupport_Checked" HorizontalAlignment="Right" VerticalAlignment="Center">
                             <RadioButton.RenderTransform>
-                                <ScaleTransform ScaleX="2" ScaleY="2"/>
+                                <ScaleTransform ScaleX="1.5" ScaleY="1.5"/>
                             </RadioButton.RenderTransform>
                         </RadioButton>
                     </DockPanel>
